Test/geanfammer_test_FASTA_DB.gclu
Cluster size    No. of clusters
     2               2
     3               2
     4               1
     5               2
     6               1
     7               1
     8               1

# This file is created by /Bio/Perl/prescop.pl with make_clustering_summary sub, Details below

Cluster size 2
Cluster number 70102        # E:      Factor:7  P:  , Ori size:2    Sub:2    From:7           
   2    7     fam_2_1           1-119      1   leng: 118
   2    7     fam_2_2           1-119      1   leng: 118
Cluster size 2
Cluster number 10302        # E:      Factor:7  P:  , Ori size:5    Sub:2    From:1           
   2    1     1b3ua             1-588      1   leng: 587
   2    1     1b3ub             1-588      1   leng: 587
Cluster size 3
Cluster number 90103        # E:      Factor:7  P:  , Ori size:3    Sub:3    From:9           
   3    9     fam_3_1           1-60       1   leng: 59
   3    9     fam_3_2           1-60       1   leng: 59
   3    9     fam_3_3           1-60       1   leng: 59
Cluster size 3
Cluster number 10203        # E:      Factor:7  P:  , Ori size:5    Sub:3    From:1           
   3    1     1ibrb             1-458      1   leng: 457
   3    1     1qgka             1-748      1   leng: 747
   3    1     1qgra             1-744      1   leng: 743
Cluster size 4
Cluster number 120104       # E:      Factor:7  P:  , Ori size:4    Sub:4    From:12          
   4    12    fam_4_1           1-120      1   leng: 119
   4    12    fam_4_2           1-120      1   leng: 119
   4    12    fam_4_3           1-120      1   leng: 119
   4    12    fam_4_4           1-120      1   leng: 119
Cluster size 5
Cluster number 160105       # E:      Factor:7  P:  , Ori size:5    Sub:5    From:16          
   5    16    fam_5_1           1-103      1   leng: 102
   5    16    fam_5_2           1-103      1   leng: 102
   5    16    fam_5_3           1-103      1   leng: 102
   5    16    fam_5_4           1-103      1   leng: 102
   5    16    fam_5_5           1-103      1   leng: 102
Cluster size 5
Cluster number 10105        # E:      Factor:7  P:  , Ori size:5    Sub:5    From:1           
   5    1     1b3ua             149-336    1   leng: 187
   5    1     1b3ub             149-336    1   leng: 187
   5    1     1ibrb             259-457    1   leng: 198
   5    1     1qgka             260-468    1   leng: 208
   5    1     1qgra             260-468    1   leng: 208
Cluster size 6
Cluster number 210106       # E:      Factor:7  P:  , Ori size:6    Sub:6    From:21          
   6    21    fam_6_1           1-108      1   leng: 107
   6    21    fam_6_2           1-108      1   leng: 107
   6    21    fam_6_3           1-108      1   leng: 107
   6    21    fam_6_4           1-108      1   leng: 107
   6    21    fam_6_5           1-108      1   leng: 107
   6    21    fam_6_6           1-108      1   leng: 107
Cluster size 7
Cluster number 270107       # E:      Factor:7  P:  , Ori size:7    Sub:7    From:27          
   7    27    fam_7_1           1-98       1   leng: 97
   7    27    fam_7_2           1-98       1   leng: 97
   7    27    fam_7_3           1-98       1   leng: 97
   7    27    fam_7_4           1-98       1   leng: 97
   7    27    fam_7_5           1-98       1   leng: 97
   7    27    fam_7_6           1-98       1   leng: 97
   7    27    fam_7_7           1-97       1   leng: 96
Cluster size 8
Cluster number 350108       # E:      Factor:7  P:  , Ori size:8    Sub:8    From:35          
   8    35    fam_8_1           2-135      1   leng: 133
   8    35    fam_8_2           4-136      1   leng: 132
   8    35    fam_8_3           2-135      1   leng: 133
   8    35    fam_8_4           4-138      1   leng: 134
   8    35    fam_8_5           4-133      1   leng: 129
   8    35    fam_8_6           4-138      1   leng: 134
   8    35    fam_8_7           1-124      1   leng: 123
   8    35    fam_8_8           2-124      1   leng: 122
